--- a/config.json
+++ b/config.json
@@ -1,3 +1,3 @@
-{ "token"  : "MzcxOTYzMjI3NDY4NDY0MTI4.DM_goQ.AAszC6gEl7fqvue14pRVPrc2cXE",
+{ "token"  : "process.env.BOT_TOKEN",
   "prefix" : "r!"
 }
