--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "version": "0.0.0",
   "main": "bot.js",
   "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node bot.js"
   },
   "dependencies": {
