--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "discord.js": "11.1.0",
     "request": "2.81.0",
     "ytdl-core": "github:fent/node-ytdl-core#master",
-    "node-opus": "^0.2.1";
-    "ffmpeg-binaries": "3.2.2";
+    "node-opus": "^0.2.1",
+    "ffmpeg-binaries": "3.2.2",
     "discord.js-music-v11": "1.3.4"
 
   }
