--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "ytdl-core": "github:fent/node-ytdl-core#master",
     "node-opus": "^0.2.1",
     "ffmpeg-binaries": "3.2.2",
-    "discord.js-music-v11": "1.3.4"
+    "discord.js-music-v11": "1.3.4",
+    "node-opus": "0.2.7",
+    "opusscript": "0.0.6"
 
   }
 }
