--- a/package.json
+++ b/package.json
@@ -10,11 +10,15 @@
   "dependencies": {
     "discord.js": "11.1.0",
     "request": "2.81.0",
-    "ytdl-core": "github:fent/node-ytdl-core#master",
+    "youtube-dl": "^1.11.1",
+    "ytdl-core": "^0.9.1",
     "node-opus": "^0.2.1",
     "ffmpeg-binaries": "3.2.2",
     "discord.js-music-v11": "1.3.4",
-    "node-opus": "0.2.7",
+    "node-opus": "^0.2.4",
+    "ffmpeg": "0.0.4",
+    "yamljs": "^0.2.8",
+    "youtube-node": "^1.3.0",
     "opusscript": "0.0.6"
 
   }
