--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "ffmpeg": "0.0.4",
     "yamljs": "^0.2.8",
     "youtube-node": "^1.3.0",
-    "opusscript": "0.0.6"
+    "opusscript": "0.0.6",
     "few": "^1.2.0",
     "googleapis": "^16.1.0",
     "say": "0.11.0",
