--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "dependencies": {
     "discord.js": "11.1.0",
     "request": "2.81.0",
-    "youtube-dl": "^1.11.1",
+    "ytdl-core": "github:fent/node-ytdl-core#master",
     "node-opus": "^0.2.1"
+
   }
 }
